[build-system]
requires = [
    "setuptools>=65.5.1",  # not directly required, pinned by Snyk to avoid a vulnerability
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "artcommonlib",
    "elliottlib", "elliottlib.cli",
    "doozerlib", "doozerlib.cli", "doozerlib.olm",
    "pyartcd", "pyartcd.pipelines",
]

[project]
dynamic = ["version"]
name="rh-art-tools"
authors = [
    {name = "AOS ART Team", email = "aos-team-art@redhat.com"},
]
description = "CLI tools for managing and automating Red Hat software releases"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openshift"]
license.file = "LICENSE"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Natural Language :: English",
]
dependencies = [
    "aiofiles",
    "aiohttp[speedups] >= 3.6",
    "aiohttp_retry",
    "aioredlock >= 0.7.3",
    "bashlex",
    "click >= 8.1.3",
    "contextvars",
    "cryptography",
    "dockerfile-parse >= 0.0.13",
    "defusedxml",
    "errata-tool ~= 1.31.0",
    "future",
    "ghapi",
    "jenkinsapi >= 0.3.13",  # https://github.com/pycontribs/jenkinsapi/issues/833
    "Jinja2",
    "jira >= 3.4.1",  # https://github.com/pycontribs/jira/issues/1486
    "koji >= 1.18",
    "mysql-connector-python >= 8.0.21",
    "openshift-client >= 1.0.12",
    "pip_system_certs",
    "pydantic ~= 1.10.7",
    "PyGitHub == 1.59.1",
    "pygit2 == 1.10.1",  # https://github.com/libgit2/pygit2/issues/1176
    "python-bugzilla >= 3.2",
    "python-dateutil >= 2.8.1",
    "pyyaml >= 5.1",
    "requests",
    "requests-gssapi ~= 1.2.3",
    "requests_kerberos",
    "ruamel.yaml",
    "semver ~= 3.0.1",
    "slack_sdk >= 3.13.0",
    "stomp.py ~= 8.1.0",
    "tenacity",
    "tomli ~= 2.0.1",
    "wrapt",
]

[project.scripts]
artcd = "pyartcd.__main__:main"
doozer = "doozerlib.cli.__main__:main"
elliott = "elliottlib.cli.__main__:main"

[project.urls]
homepage = "https://github.com/openshift-eng/art-tools"
repository = "https://github.com/openshift-eng/art-tools.git"

[project.optional-dependencies]
tests = [
    # test reqs
    "autopep8",
    "coverage>=5.3",
    "flake8>=3.8.4",
    "flexmock",
    "pytest",
    "tox>=3.20.1",
    "typing",
    "typing-extensions",
    # makefile reqs
    "mypy>=0.812",
    "pylint",
    "pytest>=6.2.1",
    "virtualenv>=20.2.2",
]
