[build-system]
requires = ["setuptools>=65.5.1", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["artcommonlib*"]

[tool.setuptools_scm]
root = ".."

[project]
dynamic = ["version"]
name = "artcommon"
authors = [{ name = "AOS ART Team", email = "aos-team-art@redhat.com" }]
description = "Common library files used by ART tools"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Natural Language :: English",
]
dependencies = [
    "pydantic>=2.11",
    "future",
    "aiohttp",
    "pycares >= 4.0.0, < 5.0.0", # Pin to 4.x until aiodns supports pycares 5.0 breaking changes
    "google-api-core",
    "google-auth",
    "google-cloud-bigquery",
    "google-cloud-core",
    "google-crc32c",
    "google-resumable-media",
    "googleapis-common-protos",
    "opentelemetry-api",
    "sqlalchemy",
    "pip-system-certs>=5.2",
    "requests-gssapi",
]


[project.urls]
homepage = "https://github.com/openshift-eng/art-tools/tree/main/artcommon"
repository = "https://github.com/openshift-eng/art-tools.git"
