[build-system]
requires = ["setuptools>=65.5.1", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["doozerlib*"]

[tool.setuptools_scm]
root = ".."

[project]
dynamic = ["version"]
name = "rh-doozer"
authors = [{ name = "AOS ART Team", email = "aos-team-art@redhat.com" }]
description = "CLI tool for managing and automating Red Hat software releases"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openshift", "errata", "advisory"]
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Natural Language :: English",
]
dependencies = [
    "aiofiles",
    "async-lru",
    "bashlex",
    "click==8.1.8",
    "dockerfile-parse>=0.0.13",
    "defusedxml",
    "future",
    "httpx",
    "httpx_gssapi",
    "importlib-resources",
    "koji",
    "kubernetes~=28.0",
    "kubernetes-asyncio~=28.0",
    "nest-asyncio>=1.6.0",
    "openshift~=0.13.2",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "pip_system_certs",
    "PyGitHub==1.59.1",
    "pyyaml>=5.1",
    "requests",
    "requests_kerberos",
    "semver",
    "tenacity~=8.4,!=8.4.0",                  # https://github.com/jd/tenacity/issues/471
    "truststore",
    "wrapt",
    "mysql-connector-python>=8.0.21",
    "python-dateutil>=2.8.1",
    "openshift-client~=2.0.1",
    "ruamel.yaml",
    "setuptools>=78.1.1",                     # not directly required, pinned by Snyk to avoid a vulnerability
    "aiohttp",
    "pycares >= 4.0.0, < 5.0.0",              # Pin to 4.x until aiodns supports pycares 5.0 breaking changes
    "jira>=3.4.1",
    "ghapi~=1.0.6,!=1.0.7",                   # https://github.com/AnswerDotAI/ghapi/issues/197
    "zipp>=3.19.1",                           # not directly required, pinned by Snyk to avoid a vulnerability
    "packageurl-python",
    "protobuf>=4.25.8",                       # not directly required, pinned by Snyk to avoid a vulnerability
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "coverage",
    "flexmock",
    "pygit2 >= 1.11.1",  # https://github.com/libgit2/pygit2/issues/1176
    "pylint",
    "pytest == 8.0.2",
    "pytest-mock",
    "tox",
    "typing",
    "typing-extensions",
    "ruff",
]

[project.scripts]
doozer = "doozerlib.cli.__main__:main"

[project.urls]
homepage = "https://github.com/openshift-eng/art-tools/tree/main/doozer"
repository = "https://github.com/openshift-eng/art-tools.git"
